--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <nav>
         <a href="@" class="nav">Home</a>
         <a href="@" class="nav">Notícias</a>
-        <a href="@" class="nav">Curiosidades</a>
-        <a href="@" class="nav">Fale Conosco</a>
+        <a href="@" class="nav">Contatos</a>
     </nav>
     <main>
         <h1>HISTÓRIA DO MASCOTE DO ANDROID</h1>
